# asciimonster

./: README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
asciimonster/: __main__.py  cli.py
tests/: test_asciimonster.py
