[project]
name = "asciimonster"
version = "0.1"
description = "a cli tool for ingesting a file and vomiting out ascii character stats"
readme = "README.md"
authors = [{name = "lonnen"}]
license = {text = "Apache-2.0"}
requires-python = ">=3.12"
classifiers = [
    "License :: OSI Approved :: Apache Software License"
]
dependencies = [
    "click"
]

[project.urls]
Homepage = "https://github.com/lonnen/asciimonster"
Changelog = "https://github.com/lonnen/asciimonster/releases"
Issues = "https://github.com/lonnen/asciimonster/issues"
CI = "https://github.com/lonnen/asciimonster/actions"

[project.scripts]
asciimonster = "asciimonster.__main__:asciimonster"

[project.optional-dependencies]
test = ["pytest"]

[tool.setuptools.packages.find]
exclude=["data"]

[tool.ruff]
# Enable pycodestyle (E), pyflakes (F), and bugbear (B) rules
lint.select = ["E", "F", "B"]
line-length = 88
target-version = "py311"

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
